--- a/PogoPlug/Pogo.css
+++ b/PogoPlug/Pogo.css
@@ -36,7 +36,8 @@
 .size2of3{
     width:66.66666%;
 }
-#SIZE1OF4
+#SIZE1OF4,
+.set,
 .size1of4{
     width:25%;
 }
@@ -113,63 +114,92 @@
 }
 
 /* Bubble */
-.dropDown {
+
+ol,ul {
+    list-style-type: none;
+    font: 13px Verdana, 'Lucida Grande';
+    cursor: pointer;
+}
+
+ol>li,ul>li {
+    margin: .2em 0
+}
+
+.navDropDown .drop {
+    position: relative;
+}
+
+ul.DropDown li a:hover {
+    color: #eee;
+}
+
+.dropOut .triangle {
+    width: 0;
+    height: 0;
     position: absolute;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-bottom: 8px solid white;
+}
+
+.dropOut .triangle {
+    top: -8px;
+    left: 50%;
+    margin-left: -8px;
+}
+.dropdownContain {
+    position: absolute;
+    z-index: 2;
+    left: 50%;
+    margin-left: -100px; /* half of width */
+    top: -400px;
+}
+.dropOut {
     width: 200px;
-    height: 120px;
-    margin-top: -6px;
-    padding: 0;
-    background: #FFFFFF;
-    -webkit-border-radius: 26px;
-    -moz-border-radius: 26px;
-    border-radius: 8px;
-    border: #000000 solid 1px;
-    text-indent: 40px;
-    visibility:hidden;
+    background: white;
+    float: left;
+    position: relative;
+    margin-top: 0px;
+    opacity: 0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 6px rgba(0,0,0,.15);
+    -moz-box-shadow: 0 1px 6px rgba(0,0,0,.15);
+    box-shadow: 0 1px 6px rgba(0,0,0,.15);
+    -webkit-transition: all .1s ease-out;
+    -moz-transition: all .1s ease-out;
+    -ms-transition: all .1s ease-out;
+    -o-transition: all .1s ease-out;
+    transition: all .1s ease-out;
+}
+.dropOut ul.dropDown {
+    float: left;
+    padding: 10px 5px;
 }
 
-.dropDown:after
-{
-    content: '';
-    position: absolute;
-    border-style: solid;
-    border-width: 0 15px 7px;
-    border-color: #FFFFFF transparent;
-    display: block;
-    width: 0;
-    z-index: 1;
-    margin-left: -15px;
-    top: -7px;
-    left: 81%;
+.dropOut ul.dropDown li {
+    text-align: left;
+    float: left;
+    width: 155px;
+    padding: 5px 0 5px 15px;
+    margin: 0px 10px;
+    color: #777;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-transition: background .1s ease-out;
+    -moz-transition: background .1s ease-out;
+    -ms-transition: background .1s ease-out;
+    -o-transition: background .1s ease-out;
+    transition: background .1s ease-out;
 }
 
-.dropDown:before
-{
-    content: '';
-    position: absolute;
-    border-style: solid;
-    border-width: 0 16px 8px;
-    border-color: #0A50AA transparent;
-    display: block;
-    width: 0;
-    z-index: 0;
-    margin-left: -16px;
-    top: -10px;
-    left: 81%;
-
+.dropOut ul.dropDown li:not(:first-child):hover {
+    background: #f6f6f6;
+    width: 155px;
 }
 
-.settings, .settings li, .settings ul {
-    list-style: none;
-}
-
-.settings ul li {
-    float:none;
-}
-
-.settings li:hover > ul {
-    position:relative;
-    visibility: visible;
-    top: 10px;
-    right:76%;
-}
+.navDropDown li:hover .dropdownContain { top: 18px; }
+.navDropDown li:hover .underline { border-bottom-color: #777; }
+.navDropDown li:hover .dropOut { opacity: 1; margin-top: 8px; }
